# hydra-lightning

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml  requirements.txt  test_imports.py
.github/workflows/: tests.yml
configen/: generate_configs.py
configen/conf/: configen.yaml  pytorch_lightning.yaml
examples/: hydra_pl_bug_report_template.py  mnist_00.py  mnist_01.py  mnist_02.py
hydra-configs-lightning/: setup.py
hydra-configs-lightning/hydra_configs/pytorch_lightning/: callbacks.py  loggers.py  trainer.py
hydra-configs-lightning/hydra_configs/pytorch_lightning/metrics/: classification.py  regression.py
hydra-configs-pytorch-lightning/: setup.py
hydra-configs-pytorch-lightning/hydra_configs/pytorch_lightning/: callbacks.py  trainer.py
hydra-configs-pytorch-lightning/hydra_configs/pytorch_lightning/metrics/: classification.py  regression.py
hydra-configs-pytorch-lightning/tests/: test_instantiate_callbacks.py  test_instantiate_metrics.py  test_instantiate_regression.py  test_instantiate_trainer.py
hydra_configs/pytorch_lightning/: __init__.py  callbacks.py  trainer.py
hydra_configs/pytorch_lightning/metrics/: classification.py  regression.py
legacy/hydra_configs/pytorch_lightning_v090/: trainer.py
legacy/hydra_configs/pytorch_lightning_v090/metrics/: regression.py
legacy/hydra_configs/pytorch_lightning_v091/metrics/: classification.py
legacy/hydra_configs/pytorch_lightning_v100/: callbacks.py
pl_config/pytorch_lightning/metrics/: classification.py
src/hydra_lightning/: generate_configs.py
src/hydra_lightning/conf/: configen.yaml
src/hydra_lightning/example/config/pytorch_lightning/: callbacks.py  metrics.py  trainer.py
